css/main.css
/* Global */

html {
    box-sizing: border-box;
    font-size: 81.3%; /*13px*/
  }

  *, *:before, *:after {
    box-sizing: inherit;
  }

:root {
    /* Colors */
    --color-red: #fc493c;
    --color-cream: #fff7ee;
    --color-black: #000;
    
    /*Typeface*/
    --font: termina, sans-serif;
    
    /*Type Weights*/
    --font-weight-h1: 900;
    --font-weight-h2: 500;
    --font-weight-h3: 500;
    --font-weight-h4: 600;
    --font-weight-table: 400;
    --font-weight-table-h: 700;
    --font-weight-p: 400;
    --font-weight-p-strng: 700;

    /*Type Sizes
    ref: https://type-scale.com/?size=13&scale=1.333&text=A%20Visual%20Type%20Scale&font=Poppins&fontweight=400&bodyfont=body_font_default&bodyfontweight=400&lineheight=1.75&backgroundcolor=%23ffffff&fontcolor=%23000000&preview=false
    */
    --font-size-h1: 13.288rem;
    --font-size-h2: 4.209rem;
    --font-size-h3: 4rem;
    --font-size-h4: 1.333rem;
    --font-size-table: 1.6rem;
    --font-size-p: 1rem;
     /*Ultimately, I think it's bad design to have h2 and h3 so close in size, but the site uses two different sizes for these items consistenly, so I followed that lead to be faithful to their design*/
}

body {
    margin: 0;
    font-family: var(--font);
    font-weight: var(--font-weight-p);
    color: var(--color-black);
    font-size: var(--font-size-p);
    line-height: 1.5;
    padding: 0;
}

a {
    text-decoration: underline;
    color: var(--color-black);
    text-underline-offset: 1rem;
    padding-top: 1rem;
    text-transform: uppercase;
    display: block;
    transition: all .2s ease-in-out;
}

a:hover {
    text-underline-offset: 0rem;
    text-decoration: none;
}

strong {
    font-weight: var(--font-weight-p-strng);
}

/* Images */

img {
    max-width: 100%;
    display: block;
}

figure {
    margin: 0;
}

figure.compimg img{
    width: 100%;
    padding-bottom: .5rem;
    margin: auto;
}

.compimg--insta {
    width: 268px;
    height: 268px;
}

figure.compimg--insta img {
    height: 100%;
    object-fit: cover;
    padding: 0;
}

.compimg--awards, .compimg--trust img {
    padding: 1rem;
}

.compimg--awards, .compimg--trust {
    width: 150px;
    height: 150px;
    border-width: 2px;
    border-style: solid;
    display: flex;
    justify-content: center;
}

.compimg--awards {
    background-color: var(--color-red);
    border-color: var(--color-cream);
}

.compimg--trust {
    background-color: var(--color-cream);
    border-color: var(--color-black);
}

figcaption {
    text-transform: uppercase;
}

/* Buttons */

.button-container {
    position: absolute;
}

.button-container--inline-lg {
    width: 200px;
    height: 200px;
    display: block;
    position: relative;
}

.button-container--inline-md {
    width: 120px;
    height: 120px;
    display: block;
    position: relative;    
}

.button-container--inline-sm {
    width: 100px;
    height: 100px;
    display: block;
    position: relative;    
}

.buttons--s {
    width: 100px;
    height: 100px;
}

.buttons--m {
    width: 120px;
    height: 120px;
}

.buttons--l {
    width: 200px;
    height: 200px;
}

.button-text {
    position: absolute;
    left: 0%;
    z-index: 2;
    transition: all 1s ease-in-out;
    animation: rotation 10s infinite linear;
}

.button-text--lg {
    width: 200px;
    height: 200px;
    top: 6%;
}

.button-text--md {
    width: 120px;
    height: 120px;
    top: 11%;
}

.button-text--sm {
    width: 100px;
    height: 100px;
    top: 13%;
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
} /*ref: https://flaviocopes.com/rotate-image/*/

.button-shapes {
    z-index: 1;
}

.button-container--inline-lg:hover, .button-container--inline-md:hover, .button-container--inline-sm:hover {
    transform: scale(1.1);
    cursor: pointer;
}

.button--arrow-rotate:hover {
    transform: rotate(-180deg);
}

.button-cream {
    fill: var(--color-cream);
    stroke: var(--color-red);
    stroke-width: 2px;
}

.button-cream--blk {
    fill: var(--color-cream);
    stroke: var(--color-black);
    stroke-width: 2px;
}

.button-blk {
    fill: var(--color-black);
}

.button-red {
    fill: var(--color-red);
}

/* Components Library */

aside {
    width:20%;
    float: left;
    background-color: var(--color-cream);
    position: fixed;
    padding-top: 2rem;
    height: 100vh;
    overflow-y: scroll;
}

aside a {
    text-decoration: none;
    text-underline-offset: 0;
    margin-left: 1rem;
    display: block;
    color: var(--color-red);
    font-weight: 600;
    text-transform: uppercase;
    margin-bottom: 1rem;
}

a.logo  {
    text-decoration: none;
    text-underline-offset: 0;
    margin: 0;
    text-transform: none;
    margin-bottom: 0rem;
}

aside a:hover {
    color: var(--color-black);
}

aside h1, aside h2, aside h3, aside a, aside.logo {
    padding: .75rem 0rem .75rem 2rem;
}

section {
    width: 80%;
    float: right;
    padding: 3rem;
}

.divider {
    width: 100%;
    border-color: var(--color-black);
    border-bottom: solid 1px;
    padding: 1rem 0rem 1rem 0rem;
    margin-bottom: 1rem;
    display: block;
}

.component {
    max-width: initial;
    padding: 2rem 0;
}

.component img {
    max-width: initial;
}

.component__img {
    border: solid 1px #ccc;
    overflow-x: auto;
}

.component__code {
    max-width: initial;
    padding: 2rem 0;
}

h1 {
    font-size: 1.75rem;
}

h2 {
    font-size: 1.25rem;
}

h3 {
    font-size: 1rem;
}

h1, h2, h3, h4, h5, h6 {
    text-transform: uppercase;
    margin: 0;
    line-height: 1;
}

/* Site Headers */

.h-one {
    color: var(--color-cream);
    background-color: var(--color-red);
    font-weight: var(--font-weight-h1);
    font-size: var(--font-size-h1);
    text-transform: uppercase;
    margin: 0 auto;
    text-align: left;
}

.h-one--red {
    color: var(--color-red);
    background-color:transparent;
}

.h-two {
    color: var(--color-black);
    font-size: var(--font-size-h2);
    font-weight: var(--font-weight-h2);
    text-transform: uppercase;
}

.h-three {
    color: var(--color-black);
    font-size: var(--font-size-h3);
    font-weight: var(--font-weight-h3);
    text-transform: uppercase;
}

.h-three--red {
    color: var(--color-red);
    font-weight: 400;
    text-transform: none;
}

.h-four {
    color: var(--color-black);
    font-size: var(--font-size-h4);
    font-weight: var(--font-weight-h4);
    text-transform: uppercase;
}

.h-four--red {
    color: var(--color-red);
}

/* Lists */

ul {
    padding: 0;
    margin: 1rem 0;
    list-style: none;
}

.list--nonum, .list--numbered {
    border-bottom: solid 1px var(--color-black);
}

.list-item {
    margin: 0;
    width: 100%;
    padding: 1rem 0;
    border-top: solid 1px var(--color-black);
}

.list-item--numbered {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

/* Table */

.table {
    width: 100%;
}

.table__row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    border-top: solid 1px var(--color-black);
    padding: 1rem 0;
    flex-basis: 30%;
}

.table__content {
    flex-basis: 70%;
}

.table__row:last-child {
    border-bottom: solid 1px var(--color-black);
}

.table__header {
    font-size: var(--font-size-table);
    font-weight: var(--font-weight-table-h);
}

.table__item {
    text-align: right;
    font-size: var(--font-size-table);
    font-weight: var(--font-weight-table);
    flex-basis: 70%;
}

.table__item:last-child {
    flex-basis: 30%;
}

.table__content figure {
    position: absolute;
    left: 75%;
    opacity: 0;
    width: 200px;
    height: 200px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all .2s ease-in-out;
}

.table__hover {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    gap: 3rem;
    opacity: 1;
    transition: all .2s ease-in-out;
}

.table__hover:hover {
    opacity: 0.5;
}

.table__img img{
    z-index: 10;
    margin: auto;
    width: 100%;
}

.table__hover:hover + .compimg {
    opacity: 1;
}


/* Site Logos */

.logo {
    fill: var(--color-black);
    width: 10rem;
    display: block;
}

.logo--cream {
    fill: var(--color-cream);
    background-color: var(--color-black);
}

.logomark {
    fill: var(--color-red);
    width: 100%;
}

.logomark--cream {
    fill: var(--color-cream);
    background-color: var(--color-red);
}

/* Site Menu Bar */

.menu {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    justify-content: center;
    align-items: center;
    width: 10%;
    color: var(--color-black);
    background-color: var(--color-cream);
}

.menu-circle {
    width: 1.75rem;
    height: 1.75rem;
    background: var(--color-black);
    border-radius: 50%;
}

.menu--black {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    justify-content: center;
    align-items: center;
    width: 10%;
    color: var(--color-cream);
    background-color: var(--color-black);
}

.menu-circle--cream {
    width: 1.75rem;
    height: 1.75rem;
    background: var(--color-cream);
    border-radius: 50%;
}

.menu-bar {
    width: 100%;
    padding: 2rem 0;
    background-color: var(--color-cream);
    display: flex;
    justify-content: space-between;
    align-content: center;
    border-bottom: 1px solid var(--color-black);
}

.menu-bar--black {
    width: 100%;
    padding: 2rem 0;
    background-color: var(--color-black);
    display: flex;
    justify-content: space-between;
    align-content: center;
    border-bottom: 1px solid var(--color-cream);
}

/* Project */

div.project-category {
    align-content: center;
    gap: .5rem;
    height: 1.25rem;
}

.project-arrow {
    transform: rotate(-135deg);
    border-radius: 50%;
    padding: .125rem;
    border: 1px solid var(--color-black);
    height: 1.25rem;
    display: inline;
}

a.project--link  {
    text-decoration: none;
    color: var(--color-black);
    text-underline-offset: 0;
    padding-top: 0;
    text-transform: none;
    display: block;
    width: fit-content;
}

.project-category--hover {
    display: none;
}
  
a.project--link:hover > .project-category--hover {
    display: flex;
} 

.project-category--normal {
    display: inline; 
}

a.project--link:hover > .project-category--normal {
    display: none;
} 

/* Work Section */

.work-container {
    width: 100%;
    height: 100vh;
    padding: 2rem 0;
    background-color: var(--color-cream);
    border-bottom: 1px solid var(--color-black);
    display: grid;
    grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
    grid-auto-flow: column;
    align-content: space-between;
    align-items: center;
}

.work-grid-1, .work-grid-2, .work-grid-3 {
    justify-self: start;
    grid-row: span 1;
    grid-column: span 1;
}

.work-grid-4 {
    grid-row: span 3;
    grid-column: span 1;
    justify-self: center;
    align-self: center;
}

.work-grid-5, .work-grid-6, .work-grid-7 {
    justify-self: end;
    grid-row: span 1;
    grid-column: span 1;
    text-align: right;
}

.work-grid-right {
    float: right;
}


/* Agency & Awards */

.agency, .awards {
    background-color: var(--color-red);
    padding: 4rem;
    margin: 0 auto;
}

.content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
}

.content--agency, .content--awards {
    color: var(--color-black);
}

.content--agency .h-three, .content--agency .list--numbered {
    flex-basis: 50%;
}

.content__paragraph {
    flex-basis: 50%;
    font-size: .85vw;
    margin-top: 1rem;
}

.content__text {
    font-family: termina, sans-serif;
    font-weight: 400;
    font-style: normal;
    line-height: 1.5;
    padding: 1rem 0;
}

.awards a {
    padding-top: 3rem;
    text-align: center;
}

